Prepare JVM tuning agent v1.0.0
Finalize P0/P1 correctness, schema exports, documentation, and runtime evidence coverage for the v1.0.0 release.

Made-with: Cursor